force-app/main/default/objects/Wording_Process_Setting__mdt/Wording_Process_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Wording Process Setting</label>
    <pluralLabel>Wording Process Settings</pluralLabel>
</CustomObject>