force-app/main/default/objects/Wording_Process_Setting__mdt/fields/Addon_String__c.field-meta.xml
<CustomField>
    <fullName>Addon_String__c</fullName>
    <label>Addon String</label>
    <length>100</length>
    <type>Text</type>
</CustomField>