force-app/main/default/objects/Wording_Process_Setting__mdt/fields/Addon_Type__c.field-meta.xml
<CustomField>
    <fullName>Addon_Type__c</fullName>
    <label>Addon Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>