force-app/main/default/objects/Wording_Process_Setting__mdt/fields/Template_Structure__c.field-meta.xml
<CustomField>
    <fullName>Template_Structure__c</fullName>
    <label>Template Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quantity Structure</fullName>
                <default>true</default>
                <label>Quantity Structure</label>
            </value>
            <value>
                <fullName>Data Set Structure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>