force-app/main/default/objects/Wording_Process_Setting__mdt/fields/Type_of_template__c.field-meta.xml
<CustomField>
    <fullName>Type_of_template__c</fullName>
    <label>Type of template</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>