force-app/main/default/objects/Wording_Process_Setting__mdt/fields/Wording_Phrase__c.field-meta.xml
<CustomField>
    <fullName>Wording_Phrase__c</fullName>
    <label>Wording Phrase</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>