force-app/main/default/objects/Wording_Process_Setting__mdt/listViews/allfields.listView-meta.xml
<ListView>
    <fullName>allfields</fullName>
    <columns>Addon_String__c</columns>
    <columns>Addon_Type__c</columns>
    <columns>IsActive__c</columns>
    <columns>Template_Structure__c</columns>
    <columns>Type_of_template__c</columns>
    <columns>Wording_Phrase__c</columns>
    <filterScope>Everything</filterScope>
    <label>allfields</label>
    <language>en_US</language>
</ListView>